vlib/v/parser/tests/builtin_enum_type_name_err.vv
enum rune {
	a
	b
	c
}
